--- a/cleaning.Rmd
+++ b/cleaning.Rmd
@@ -28,9 +28,11 @@ library(agridat)
 
 ## 2 INTRODUCTION
 
-Data cleaning, manipulation and transformation are very important in data science. They process datasets and convert them into a format of analysis-ready for later analysis such as visualisation or creating predictive models. 
+Data cleaning, manipulation and transformation are very important in data science. They process datasets and convert them into a format that is usable for later analysis such as visualisation or creating predictive models. 
 
-This is a side project to demonstrate data cleaning skills. I will clean a public dataset from "agridate" R package, named "bridges.cucumber". This dataset has actually been cleaned but I downloaded the cleaned format, devastate, ruin and mess it. The single cleaned table has been spitted into 4 tables and with a variability of cleaning tasks. 
+This is a side project to demonstrate my data cleaning skills, not all, but hopefully it is  comprehensive enough for your reference. You could visit my other projects on my [Github](https://github.com/KAR-NG) repository. All my projects have a section of data cleaning. 
+
+In this project, I will clean a public dataset from "agridate" R package, named "bridges.cucumber". This dataset has actually been cleaned but I downloaded the cleaned format, devastate, ruin and mess it. The single cleaned table has been spitted into 4 tables with a numbers of cleaning tasks. 
 
 ![](https://raw.githubusercontent.com/KAR-NG/cleaning/main/pic0_4Tables.JPG)
 
@@ -70,9 +72,7 @@ table4 <- read.csv("cucum4.csv", fileEncoding = "UTF-8-BOM")
 
 Main tasks identified from table 1:
 
-![]()
-
-
+![](https://raw.githubusercontent.com/KAR-NG/cleaning/main/pic1_table1.JPG)
 
 * Rename the column names.  
 * Split the first column into two.  
@@ -80,7 +80,6 @@ Main tasks identified from table 1:
 * Fill up the missing values of the first column.   
 * Convert the *4000* in the "row" into 4, according to adjacent values of this column.   
 * Convert the *1000* in the "column" into 1,  according to adjacent values of this column.  
-
 
 
 **Structural and variable names conversion**
@@ -111,7 +110,7 @@ table1 <- table1 %>%
          loc = replace(loc, loc == "CLEMSON", "Clemson"),
          loc = as.character(loc),                    # for factor's levels cleaning. 
          gen = as.character(gen),                    # To use case when, variable has to be character
-         gen = case_when(gen == "" ~ "Dasher",       # Same nature as replace, I know this blank is "Dasher".
+         gen = case_when(gen == "" ~ "Dasher",      # Same nature as replace, I know this blank is "Dasher".
                          gen == "poinsett" ~ "Poinsett",
                          gen == "s" ~ "Sprint",
                          TRUE ~ gen)) %>% 
@@ -135,22 +134,190 @@ summary(table1)
 
 ```
 
-Cleaning of table 1 has now been completed. 
+The cleaning of table 1 has now completed. 
 
-### 4.2 Cleaning table  2
+### 4.2 Cleaning table 2
 
 Main tasks identified:
 
+![](https://raw.githubusercontent.com/KAR-NG/cleaning/main/pic2_table2.JPG)
+
+* Trim leading and trailing white spaces.  
 * Remove the first column.  
 * Rename column names.  
 * Clean the strings in location and genotype.
 * Combine yield_x, yield_7, and yield_z
 
+
+**Structural and variable names conversion**
+
 ```{r}
+tbl2 <- table2 %>% 
+  rename(loc = Llocation,             # Change variable names
+         gen = genotype,
+         row = rowrow,
+         col = colu....mn) %>% 
+  select(-X) %>%                      # remove first column
+  mutate(loc = trimws(loc),           # trim leading and trailing white spaces 
+         gen = trimws(gen)) %>% 
+  mutate_if(is.character, as.factor)  # changing character variables to factor
+
+summary(tbl2)
+
+```
+
+I can see that in the column "loc", all values are actually "Tifton" based on the original dataset, and it is my job to convert all other strings into "Tifton". In the column "gen", I will need to rectify a typo of Poinsett and fill up 2 blank cells. 
+
+**Cleaning the strings**
+
+```{r}
+tbl2 <- tbl2 %>% 
+  mutate_if(is.factor, as.character) %>% 
+  mutate(loc = case_when(loc == "t" ~ "Tifton",
+                         loc == "T" ~ "Tifton",
+                         loc == "Ti   fton" ~ "Tifton",
+                         loc == "Tif" ~ "Tifton",
+                         TRUE ~ loc),
+         loc = replace(loc, loc == "Tiftaaon", "Tifton"),
+         gen = replace(gen, gen == "Poi    nsett", "Poinsett"),
+         gen = replace(gen, gen == "", NA)) %>% 
+  fill(gen) %>%                               
+  mutate_if(is.character, as.factor)
+
+summary(tbl2)
+
+
+```
+
+Next I will need to combine yield x, y, and z into 1 single column with a name, "yield".
+
+**Combine the column yield x, y and z**
+
+```{r}
+table2 <- tbl2 %>%
+  mutate(yield = paste0(yield.x, yield_y, yield_z)) %>% 
+  mutate(yield = str_remove_all(yield, pattern = "NA")) %>% 
+  select(-5, -6, -7)
+
 table2
+ 
+```
+
+The cleaning of table 2 has now completed.
+
+
+### 4.3 Cleaning tables 3 and 4
+
+This section will clean 3 and 4 together and combine them into 1.
+
+Main tasks identified:
+
+![](https://raw.githubusercontent.com/KAR-NG/cleaning/main/pic3_table3_table4.JPG)
+
+* Merge 2 tables together.  
+* Rename variable names.  
+* Remove the irrevalent row 3.    
+* Fix the typo "10" in the column of Row in table 4.  
+* Convert the levels of location and genotype into a proper case with only the first character being upper case.    
+
+
+```{r}
+table3 <- table3 %>% 
+  left_join(table4, by = "id") %>% 
+  select(-1) %>% 
+  rename(loc = LOCATION,
+         gen = GENOTYPE,
+         row = ROW,
+         col = COLUMN,
+         yield = YIELD.G) %>% 
+  mutate(loc = replace(loc, loc == "TIFTON", "Tifton"),
+         gen = replace(gen, gen == "SPRINT", "Sprint")) %>% 
+  filter(loc != "GATTON")
+
+
+```
+
+The cleaning of tables 3 and 4 has now completed.
+
+### 4.4  Combine all tables
+
+Finally, 3 tables are combined into one final table. 
+
+```{r}
+final_table <- rbind(table1, table2, table3)
+
+final_table <- final_table %>% 
+  mutate(yield = as.double(yield))
+
+final_table
 
 ```
 
 
+
+
+
+*Final "health check"*
+
+There is no missing value in the dataset.
+
+```{r}
+skim_without_charts(final_table)
+
+```
+Following code check data type. These default variable type allocations are fine for this cleaning project. 
+
+```{r}
+glimpse(final_table)
+
+```
+
+I can clearly see that there are two location "Clemson" and "TIfton" as well as 4 cucumber genotypes represented by "gen". Both variables have equal sample sizes among their attribute (or known as "level"). 
+
+```{r}
+summary(final_table)
+```
+
+This project is not meant to draw graphs, but I am drawing one to inspect possible outliers that may need to be cleaned. I will compared with the original dataset, named "bridges.cucumber". 
+
+```{r}
+
+# Set up dataframe / combine final table with the original dataset
+
+group <- rep(c("final_table", "original"), each = 32)
+test <- rbind(final_table, bridges.cucumber)
+test <- cbind(group, test)
+
+# Plot
+
+ggplot(test, aes(x = fct_reorder(gen, yield), y = yield, fill = group)) +
+  geom_boxplot() +
+  facet_wrap(~ group) +
+  theme_bw() +
+  theme(legend.position = "none",
+        strip.text = element_text(size = 12),
+        axis.title.x = element_text(margin = margin(10, 0, 0, 0)),
+        axis.title.y = element_text(margin = margin(0, 10, 0, 0)),
+        plot.title = element_text(face = "bold", vjust = 2)) +
+  labs(x = "Cucumber genotype",
+       y = "Yield, g",
+       title = "Comparing Final Table with the Original to Check for Disparity")
+
+  
+```
+
+Both tables are identical which indicates that the data cleaning tasks of this project has been successful. 
+
+
+## 5 CONCLUSION
+
+In conclusion, this project successfully uses R codes to clean and combine 4 tables into 1, with a format of analysis-ready. 
+
+**Thank you for reading**
+
+
+## 6 REFERENCE
+
+https://cran.r-project.org/web/packages/agridat/agridat.pdf
 
 
