--- a/cleaning.Rmd
+++ b/cleaning.Rmd
@@ -12,6 +12,8 @@ always_allow_html: yes
 
 ***
 
+![](https://raw.githubusercontent.com/KAR-NG/cleaning/main/pic4_thumbnail.JPG)
+
 ***
 
 ## 1 R PACKAGES
@@ -28,17 +30,17 @@ library(agridat)
 
 ## 2 INTRODUCTION
 
-Data cleaning, manipulation and transformation are very important in data science. They process datasets and convert them into a format that is usable for later analysis such as visualisation or creating predictive models. 
+Data cleaning, manipulation and transformation are very important in data science. They process datasets and convert them into a format that is usable for later analysis such as visualisation and creating predictive models. 
 
-This is a side project to demonstrate my data cleaning skills, not all, but hopefully it is  comprehensive enough for your reference. You could visit my other projects on my [Github](https://github.com/KAR-NG) repository. All my projects have a section of data cleaning. 
+This project is a side project to demonstrate my data cleaning skills. I hope this project is comprehensive enough for your reference. You could visit my other projects on my [Github](https://github.com/KAR-NG) repository to view how I cleaned up data for many other projects. All my projects have a section of data cleaning. 
 
-In this project, I will clean a public dataset from "agridate" R package, named "bridges.cucumber". This dataset has actually been cleaned but I downloaded the cleaned format, devastate, ruin and mess it. The single cleaned table has been spitted into 4 tables with a numbers of cleaning tasks. 
+In this project, I will clean a public dataset from a R package - "agridate", the dataset is called "bridges.cucumber". This dataset has actually been cleaned but I downloaded the data, devastate, ruin and mess it. The single cleaned table has been spitted into 4 tables with a numbers of cleaning tasks. 
 
 ![](https://raw.githubusercontent.com/KAR-NG/cleaning/main/pic0_4Tables.JPG)
 
 
 
-How the original format is like? 
+How the original dataset is like? 
 
 ```{r}
 data("bridges.cucumber", package = "agridat")
@@ -46,9 +48,7 @@ bridges.cucumber
 
 ```
 
-It is a dataset that record the experimental result of a cucumber with variables of loc (location), gen (genotype), row (row position of the trial block), col (column position of the trial block) and lastly, the yield.  
-
-This purpose of this project is to show the R codes used to convert the 4 messy tables into this final analysis-ready format. 
+This dataset records the results of a cucumber experiment with variables - loc (location), gen (genotype), row (row position of the trial block), col (column position of the trial block) and lastly, the yield.  
 
 
 ## 3 DATA IMPORT
@@ -146,7 +146,7 @@ Main tasks identified:
 * Remove the first column.  
 * Rename column names.  
 * Clean the strings in location and genotype.
-* Combine yield_x, yield_7, and yield_z
+* Combine yield_x, yield_y, and yield_z
 
 
 **Structural and variable names conversion**
@@ -162,11 +162,12 @@ tbl2 <- table2 %>%
          gen = trimws(gen)) %>% 
   mutate_if(is.character, as.factor)  # changing character variables to factor
 
+
 summary(tbl2)
 
 ```
 
-I can see that in the column "loc", all values are actually "Tifton" based on the original dataset, and it is my job to convert all other strings into "Tifton". In the column "gen", I will need to rectify a typo of Poinsett and fill up 2 blank cells. 
+In the column "loc", all values are actually "Tifton" based on the original dataset, and it is my job to convert all other strings into "Tifton". In the column "gen", I will need to rectify a typo of Poinsett and fill up 2 blank cells. 
 
 **Cleaning the strings**
 
@@ -183,6 +184,7 @@ tbl2 <- tbl2 %>%
          gen = replace(gen, gen == "", NA)) %>% 
   fill(gen) %>%                               
   mutate_if(is.character, as.factor)
+
 
 summary(tbl2)
 
@@ -201,6 +203,8 @@ table2 <- tbl2 %>%
 
 table2
  
+
+
 ```
 
 The cleaning of table 2 has now completed.
@@ -216,8 +220,8 @@ Main tasks identified:
 
 * Merge 2 tables together.  
 * Rename variable names.  
-* Remove the irrevalent row 3.    
-* Fix the typo "10" in the column of Row in table 4.  
+* Remove the irrelevant row 3 (id = 3).     
+* Fix the typo "10" in the column of ROW in table 4.
 * Convert the levels of location and genotype into a proper case with only the first character being upper case.    
 
 
@@ -255,30 +259,28 @@ final_table
 
 
 
+**Final "health check"**
 
-
-*Final "health check"*
-
-There is no missing value in the dataset.
+There are no missing values in the dataset by examining the variables "n_missing" and "complete_rate" of following table.
 
 ```{r}
 skim_without_charts(final_table)
 
 ```
-Following code check data type. These default variable type allocations are fine for this cleaning project. 
+Following code checks the data and variable types - All good.
 
 ```{r}
 glimpse(final_table)
 
 ```
 
-I can clearly see that there are two location "Clemson" and "TIfton" as well as 4 cucumber genotypes represented by "gen". Both variables have equal sample sizes among their attribute (or known as "level"). 
+I can clearly see that there are two location "Clemson" and "Tifton" as well as 4 cucumber genotypes represented by "gen". Both variables have equal sample sizes among their attribute (or known as "level"). 
 
 ```{r}
 summary(final_table)
 ```
 
-This project is not meant to draw graphs, but I am drawing one to inspect possible outliers that may need to be cleaned. I will compared with the original dataset, named "bridges.cucumber". 
+This project is not meant to draw graphs but I am drawing one to inspect and compare my final cleaned table with the original dataset from the R package, named "bridges.cucumber". 
 
 ```{r}
 
@@ -311,9 +313,11 @@ Both tables are identical which indicates that the data cleaning tasks of this p
 
 ## 5 CONCLUSION
 
-In conclusion, this project successfully uses R codes to clean and combine 4 tables into 1, with a format of analysis-ready. 
+In conclusion, this project successfully uses R codes to clean and combine four messy tables into one that has a perfect format for analysis.
 
-**Thank you for reading**
+
+
+*Thank you for reading.*
 
 
 ## 6 REFERENCE
