--- a/cleaning.Rmd
+++ b/cleaning.Rmd
@@ -12,7 +12,7 @@ always_allow_html: yes
 
 ***
 
-![](https://raw.githubusercontent.com/KAR-NG/cleaning/main/pic4_thumbnail.JPG)
+![](https://raw.githubusercontent.com/KAR-NG/Dirty-Data-Challenge-/main/pic4_thumbnail.png)
 
 ***
 
@@ -24,6 +24,7 @@ Following codes load required R packages for this project.
 library(tidyverse)
 library(skimr)
 library(agridat)
+library(caret)
 
 ```
 
@@ -32,7 +33,7 @@ library(agridat)
 
 Data cleaning, manipulation and transformation are very important in data science. They process datasets and convert them into a format that is usable for later analysis such as visualisation and creating predictive models. 
 
-This project is a side project to demonstrate my data cleaning skills. I hope this project is comprehensive enough for your reference. You could visit my other projects on my [Github](https://github.com/KAR-NG) repository to view how I cleaned up data for many other projects. All my projects have a section of data cleaning. 
+This project is a side project to demonstrate my data cleaning skills. This project works on a simple dataset with many common cleaning tasks. I hope this project is comprehensive enough for your reference. You could visit my other projects on my [Github](https://github.com/KAR-NG) repository to view how I cleaned up other projects.
 
 In this project, I will clean a public dataset from a R package - "agridate", the dataset is called "bridges.cucumber". This dataset has actually been cleaned but I downloaded the data, devastate, ruin and mess it. The single cleaned table has been spitted into 4 tables with a numbers of cleaning tasks. 
 
@@ -68,65 +69,150 @@ table4 <- read.csv("cucum4.csv", fileEncoding = "UTF-8-BOM")
 
 ## 4 DATA CLEANING
 
+In the upcoming cleanings of this project, you may see a more complicated way to clean the data because this kind of procedures have higher transferability between datasets or projects instead of just relying on simple cleaning that only works in this project. My cleanings will be a mix of both. 
+
+
 ### 4.1 Cleaning table 1
 
 Main tasks identified from table 1:
 
-![](https://raw.githubusercontent.com/KAR-NG/cleaning/main/pic1_table1.JPG)
+![](https://raw.githubusercontent.com/KAR-NG/Dirty-Data-Challenge-/main/pic1_table1.JPG)
+
 
 * Rename the column names.  
 * Split the first column into two.  
-* Strings manipulation in the first column.  
+* Strings manipulation and extraction in the first column.  
 * Fill up the missing values of the first column.   
 * Convert the *4000* in the "row" into 4, according to adjacent values of this column.   
 * Convert the *1000* in the "column" into 1,  according to adjacent values of this column.  
+* There are two observation with NAs in row, col and yield, these two rows should be removed as there are too many missing values that making these rows meaningless. 
+* Imputation of two of the NA in the column "yield" by imputation model.
 
-
-**Structural and variable names conversion**
+**Step 1： Cleaning column 1 by Rename + lower case + remove punctuation**
 
 ```{r}
-
-table1 <- table1 %>%
-  separate("Llocation.genotype", into = c("loc", "gen"), sep = "-") %>% 
-  rename(row = rowrow,
+t1 <- table1 %>% 
+  rename("loc_gen" = Llocation.genotype,
+         row = rowrow,
          col = column,
          yield = yield.g) %>% 
-  mutate_if(is.character, as.factor)
-  
+  mutate(loc_gen = str_to_lower(loc_gen),
+         loc_gen = str_replace_all(loc_gen, "[[:punct:]]", " "),
+         loc_gen = replace(loc_gen, loc_gen == " ", NA)) 
 
-summary(table1)
+t1
 
 ```
 
-In the column of "loc", I have to convert all strings into "Clemson". For the column of "gen", I need to convert those undesirable strings according to the most likely adjacent values. 
+**Step 2: Fill up the missing value in loc_gen.** 
 
-**Cleaning the strings**
+I observed that the empty cell should be "clemson dasher" as compared to adjacent strings and the frequency of this combination in the entire dataset.
 
 ```{r}
-table1 <- table1 %>% 
-  mutate(loc = replace(loc, loc == "", "Clemson"),   # I am already sure that this blank cell is "Clemson".
-         loc = replace(loc, loc == "Clem", "Clemson"),
-         loc = replace(loc, loc == "Clem_son", "Clemson"),
-         loc = replace(loc, loc == "CLEMSON", "Clemson"),
-         loc = as.character(loc),                    # for factor's levels cleaning. 
-         gen = as.character(gen),                    # To use case when, variable has to be character
-         gen = case_when(gen == "" ~ "Dasher",      # Same nature as replace, I know this blank is "Dasher".
-                         gen == "poinsett" ~ "Poinsett",
-                         gen == "s" ~ "Sprint",
-                         TRUE ~ gen)) %>% 
+
+t1_temp <- t1 %>% 
+  mutate(comment = ifelse(is.na(loc_gen), "Was a NA -->", ""),
+         loc_gen = replace(loc_gen, is.na(loc_gen), "clemson dasher")) %>% 
+  relocate(comment, .before = loc_gen)
+
+t1_temp 
+
+```
+
+**Step 3: Create loc and gen from log_gen**
+
+```{r}
+# set up df
+
+t1 <- t1_temp %>% dplyr::select(-comment)
+
+# set up rules
+
+loc <- "clemson|clem|c"          # Observe from table 1 I know that loc is clemson
+gen <- c("dasher|guardian|poinsett|sprint") # Observe from table 1 I know these are gen 
+
+# get loc and gen, and remove loc_gen 
+
+t1 <- t1 %>% 
+  mutate(loc = str_extract(loc_gen, loc),
+         gen = str_extract(loc_gen, gen),
+         gen = ifelse(loc_gen == "i am pretty sure this is clemson s", "sprint", gen)) %>% 
+  mutate(gen = ifelse(str_detect(loc_gen,"in this cell"), "sprint", gen)) %>% 
+  dplyr::select(-loc_gen) %>% 
+  relocate(loc, .before = row) %>% 
+  relocate(gen, .after = loc) %>% 
+  mutate(loc = ifelse(loc == "clem", "clemson", loc)) %>% 
   mutate_if(is.character, as.factor)
+  
+t1 
 
-summary(table1)
+```
 
+In table 1, the "loc" has only 1 level called "clemson".
+
+```{r}
+levels(t1$loc)
+
+```
+In table 1, the "gen" has 4 levels. 
+
+```{r}
+levels(t1$gen)
+
+```
+
+**Step 4: Get perfect loc and gen column.**
+
+Calculating the number of missing values in each row of data, not column.   
+
+* Row 17 and 18 have the highest number of missing values. 
+* They will be removed. 
+
+```{r}
+ t1 %>% 
+  mutate(id = row_number()) %>% 
+  gather(key = "variable", value = "value", -6) %>% 
+  mutate(max.number.of.variables = n_distinct(variable)) %>% 
+  filter(is.na(value)) %>% 
+  group_by(id, max.number.of.variables) %>% 
+  summarise(count = n()) %>% 
+  mutate(InfoLost.percent = paste0(count/max.number.of.variables * 100, "%"))
+  
+
+```
+Checking row 17 and 18, they do not contain important information.
+
+```{r}
+t1[c(17:18), ]
+  
+```
+
+Additionally, all level have 4 levels and only sprint has 6 levels. It is obvious that 17 and 18 are errors and should be removed.
+
+```{r}
+t1 %>% group_by(gen) %>% summarise(count = n())
+
+```
+Removing row 17 and 18.
+
+```{r}
+t1 <- t1[-c(17, 18),]
+
+```
+
+Removal was succesful. 
+
+```{r}
+t1 %>% group_by(gen) %>% summarise(count = n())
 ```
 
 Next, I will clean up the 4000 and 1000 in the "row" and "col" columns.
  
-**Cleaning outlier values in row and col**
+**Step 5: Cleaning outlier values in row and col**
 
 ```{r}
 
-table1 <- table1 %>% 
+table1 <- t1 %>% 
   mutate(row = replace(row, row == 4000, 4),
          col = replace(col, col == 1000, 1))
   
@@ -134,13 +220,14 @@ summary(table1)
 
 ```
 
-The cleaning of table 1 has now completed. 
+The cleaning of table 1 has now considered completed. There are two missing values in the *yield*, I will fill them up with imputation model after combining other tables into this table. 
+
 
 ### 4.2 Cleaning table 2
 
 Main tasks identified:
 
-![](https://raw.githubusercontent.com/KAR-NG/cleaning/main/pic2_table2.JPG)
+![](https://raw.githubusercontent.com/KAR-NG/Dirty-Data-Challenge-/main/pic2_table2.JPG)
 
 * Trim leading and trailing white spaces.  
 * Remove the first column.  
@@ -216,7 +303,7 @@ This section will clean 3 and 4 together and combine them into 1.
 
 Main tasks identified:
 
-![](https://raw.githubusercontent.com/KAR-NG/cleaning/main/pic3_table3_table4.JPG)
+![](https://raw.githubusercontent.com/KAR-NG/Dirty-Data-Challenge-/main/pic3_table3_table4.JPG)
 
 * Merge 2 tables together.  
 * Rename variable names.  
@@ -253,21 +340,85 @@ final_table <- rbind(table1, table2, table3)
 final_table <- final_table %>% 
   mutate(yield = as.double(yield))
 
+# a bit of cleaning
+
+final_table <- final_table %>% 
+  mutate(loc = str_to_lower(loc),
+         gen = str_to_lower(gen)) %>% 
+  mutate_if(is.character, as.factor) %>% 
+  arrange(loc, gen, row, col)
+
 final_table
 
 ```
 
 
+### 4.5 Missing value Imputation
 
-**Final "health check"**
+Last but not least, there are 2 missing values in the "yield" column and I will fill them up using imputation model to predict the most possible values based on adjacent data. 
 
-There are no missing values in the dataset by examining the variables "n_missing" and "complete_rate" of following table.
+```{r}
+colSums(is.na(final_table))
+```
+
+
+Imputation technique I am applying is a type of machine learning imputation model that will use all columns in the dataset to predict these missing values. I am using the imputation function from "caret" package. 
+
+To use the function, I will need to convert all factor variables into dummy data.
+
+```{r}
+# Dummy transformation
+
+dummy.variables <- dummyVars(~., data = final_table)
+final_table_dum <- dummy.variables %>% predict(final_table)  
+
+head(final_table_dum)
+
+```
+
+Assessing the number of missing values again. 
+
+```{r}
+colSums(is.na(final_table_dum))
+
+```
+
+Imputation using bagging of decision trees. 
+
+```{r}
+set.seed(123)
+
+imputation.model <- preProcess(final_table_dum, method = "bagImpute")
+imputed.final.table <- imputation.model %>% predict(final_table_dum)
+imputed.final.table
+
+```
+Overwrite the "yield" of the final_table. 
+
+```{r}
+final_table$yield <- imputed.final.table[, 9]
+
+```
+
+
+Checking randomly selected 10 rows from the dataset. The imputation has been successful.  
+
+```{r}
+sample_n(final_table, 10)
+
+```
+
+
+## 5. Data "health check"
+
+There are no missing values in the dataset by examining the variables "n_missing" and "complete_rate" of following table. 
 
 ```{r}
 skim_without_charts(final_table)
 
 ```
-Following code checks the data and variable types - All good.
+
+All data are with correct type that are readied for machine learning prediction. 
 
 ```{r}
 glimpse(final_table)
@@ -282,7 +433,7 @@ summary(final_table)
 
 This project is not meant to draw graphs but I am drawing one to inspect and compare my final cleaned table with the original dataset from the R package, named "bridges.cucumber". 
 
-```{r}
+```{r, fig.width=8}
 
 # Set up dataframe / combine final table with the original dataset
 
@@ -294,7 +445,7 @@ test <- cbind(group, test)
 
 ggplot(test, aes(x = fct_reorder(gen, yield), y = yield, fill = group)) +
   geom_boxplot() +
-  facet_wrap(~ group) +
+  facet_wrap(~ group, scales = "free_x") +
   theme_bw() +
   theme(legend.position = "none",
         strip.text = element_text(size = 12),
@@ -308,7 +459,7 @@ ggplot(test, aes(x = fct_reorder(gen, yield), y = yield, fill = group)) +
   
 ```
 
-Both tables are identical which indicates that the data cleaning tasks of this project has been successful. 
+There were two missing values in guardian and dasher of final_table filled up by estimates from the imputation model. That is why the guardian and dasher of two dataset seems a little bit different. However, the difference is minor and not dramatic. 
 
 
 ## 5 CONCLUSION
